findbugs: fix some warning